--- a/2048 change.html
+++ b/2048 change.html
@@ -1,15 +1,41 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0">
 <title>2048</title>
+  <style>-->
+  body {
+  background-color: rgb(224, 223, 156); 
+}
+#snow {
+  background: none;
+  background-image: url('s1.png'), url('s2.png'), url('s3.png');
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+ 
+  animation: snow 10s linear infinite;  /*雪花移动速度*/
+}
+@keyframes snow {  /*添加动态效果，三张图片从哪里移动到哪里*/
+  0% {
+    background-position: 0px 0px, 0px 0px, 0px 0px;
+  }
+  
+  100% {
+    background-position: 500px 1000px, 200px 400px, -100px 300px;
+  }
+}
 
-
-
+  </style>
 </head>
 
+
 <body>
+<div id="snow"></div>
 
 <header>
 	<div class="container">
@@ -19,7 +45,7 @@
 
 <div class="container">
 	<div class="directions">
-		<p><strong>如何玩：</strong> 使用鼠标方向键键移动数字方块。相邻的两个方块数字相同，它们可合并成一个！</p>
+		<p><strong>使用键盘方向键键移动数块</strong></p>
 	</div>
 	<div class="scores">
 		<div class="score-container best-score">
@@ -36,7 +62,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="game">
+	<div class="box">
 		<div id="tile-container" class="tile-container"></div>
 		<div class="end" id="end">游戏结束<div class="monkey">🙈</div><button class="btn not-recommended__item js-restart-btn" id="try-again">再试一次</button></div>
 	</div>
@@ -45,10 +71,8 @@
 		<button class="btn not-recommended__item js-restart-btn" id="restart">重新启动游戏</button>
 		<span class="not-recommended__annotation"></span>
 	</div>
-
 </div>
-
-
+<script src="js/index.js"></script>
 <div style="text-align:center;">
 </div>
 </body>
